team/output/BD_167_260_770_788/284/1/0/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_167_260_770_788_ItHP0dn.py", line 24
    def setRank(x):
      ^
SyntaxError: invalid syntax
